--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,89 +1,51 @@
 name: komorebi_web
-description: "A new Flutter project."
-
-
+description: "Personal website for music wrote in flutter cuz why not lols."
 publish_to: 'none' 
-
-
-
-
-
-
-
-
-
-
-
-
-
 version: 1.0.0+1
+
 
 environment:
   sdk: ^3.8.1
 
 
-
-
-
-
-
 dependencies:
   flutter:
-    sdk: flutter
-
-  
-  
+    sdk: flutter  
   cupertino_icons: ^1.0.8
+  freezed_annotation: ^3.1.0
+  json_annotation: ^4.9.0
+  auto_route: ^10.1.0+1
+  get_it: ^8.2.0
+  injectable: ^2.5.1
+  flutter_bloc: ^9.1.1
+  flutter_svg: ^2.2.0
+  dio: ^5.9.0
+  json_serializable: ^6.10.0
+  google_fonts: ^6.3.0
+  url_launcher: ^6.3.2
+  shared_preferences: ^2.5.3
+  logger: ^2.6.1
+  cached_network_image: ^3.4.1
+  easy_localization: ^3.0.8
+  sizer: ^3.0.5
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  
-  
-  
-  
-  
   flutter_lints: ^5.0.0
-
-
-
+  freezed: ^3.2.0
+  build_runner: ^2.6.0
+  injectable_generator: ^2.8.1
+  flutter_gen_runner: ^5.11.0
 
 
 flutter:
-
-  
-  
-  
+  generate: true
   uses-material-design: true
-
-  
-  
-  
-  
-
-  
-  
-
-  
-  
-
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  assets:
+    - assets/
+    - assets/images/
+    - assets/icons/
+    - assets/fonts/
+    - assets/translations/
