--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   cached_network_image: ^3.4.1
   easy_localization: ^3.0.8
   sizer: ^3.0.5
+  custom_mouse_cursor: ^1.1.3
+  gap: ^3.0.1
 
 
 dev_dependencies:
@@ -48,4 +50,4 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/fonts/
-    - assets/translations/
+    - lib/src/localization/
