--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,3 +51,10 @@ flutter:
     - assets/icons/
     - assets/fonts/
     - lib/src/localization/
+  fonts:
+    - family: Exo2
+      fonts:
+        - asset: assets/fonts/Exo2/Exo2-Regular.ttf
+        - asset: assets/fonts/Exo2/Exo2-Bold.ttf
+          weight: 700
+  
